# bidding-player

./: .gitignore  AGENTS.md  LICENSE  README.md  adops-guide.html  docs.html  index.html  prerequisites.html  publisher-guide.html
.github/workflows/: build-prebid-bundle.yml  pages-deploy.yml  pdf-regen.yml  purge-dev-engine.yml  version-check.yml
control-plane/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
control-plane/.github/workflows/: ci.yml
control-plane/app/: db.py  main.py  settings.py
control-plane/app/auth/: deps.py  security.py
control-plane/app/models/: __init__.py  audit.py  demand.py  events.py  tenancy.py
control-plane/app/routers/: admin_audit.py  admin_demand.py  admin_publishers.py  analytics.py  auth.py  collector.py  config.py  stats.py  tags.py
control-plane/app/schemas/: admin.py  config.py  events.py
control-plane/app/services/: analytics.py  audit.py  config_assembly.py  demo.py  embed.py  ingest.py  seed.py
control-plane/app/static/: admin.html  preview.html
control-plane/docs/: engine-instrumentation.md  event-schema.md  operator-guide.md
control-plane/migrations/: env.py
control-plane/migrations/versions/: 238f01f77ac1_initial_schema.py  a1b2c3d4e5f6_seed_reference_data.py  b2c3d4e5f6a7_soft_delete_and_audit_log.py  c3d4e5f6a7b8_audit_entity_label.py
control-plane/tests/: conftest.py  helpers.py  test_admin_crud.py  test_analytics.py  test_auth.py  test_collector.py  test_config.py  test_db.py  test_delete_and_audit.py  test_settings.py  test_stats.py  test_tags.py
demo/: publisher-test-outstream.html  publisher-test.html
engine/: channel.json  loader.js  player.js
prebid/: README.md  prebid.js
scripts/: release.sh
