[project]
name = "bidding-player-control-plane"
version = "0.1.0"
description = "Control plane for the Bidding Player video header-bidding product: publisher/demand config + runtime config delivery + telemetry ingestion."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI uses function calls (Depends) in argument defaults by design

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates verbose column definitions that exceed the line length.
"migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
# mypy is scoped to `app` in CI; migrations/alembic are not type-checked.

[[tool.mypy.overrides]]
module = ["passlib.*", "jwt.*"]
ignore_missing_imports = true

# Route handlers are thin FastAPI glue; their response shapes are enforced by
# `response_model`, not the function return annotation. Relax the untyped-def
# rules there while keeping strict typing on the logic (services/schemas/auth).
[[tool.mypy.overrides]]
module = ["app.routers.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
